# BiliRoaming-Rust-Speedtest

./: Cargo.toml  README.md  config.json
.github/workflows/: ci.yml  ci_ubuntu  ci_ubuntu.yml
src/: main.rs  mods.rs
src/mods/: build.rs  draw.rs  request.rs  types.rs  upload.rs
