[package]
name = "biliroaming_rust_speedtest"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.3"
imageproc = "0.23.0"
curl = "0.4.44"
rusttype = "0.9.2"
serde_json = "1.0.85"
serde = {version ="1.0.144",features = ["derive"]}
chrono = "0.4.22"
qstring = "0.7.2"
md5 = "0.7.0"
#brotli = "3.3.4"

[profile.fast]
inherits = "release"
opt-level = 3 
debug = false 
split-debuginfo = 'off' 
debug-assertions = false 
overflow-checks = false 
lto = true 
panic = 'unwind' 
incremental = false 
codegen-units = 1 
rpath = false